--- a/README.Rmd
+++ b/README.Rmd
@@ -31,25 +31,19 @@ devtools::install_github("darwin-eu-dev/TestGenerator")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+Function to read the .xls file with data generally from 10 patients. By default, it generates a JSON files in the inst/testCases folders. 
 
 ```{r example}
 library(TestGenerator)
-## basic example code
+
+TestGenerator::readPatients(here::here("extras", "RSV_Test_Data.xlsx"))
+
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+Data then can be pushed to a blank CDM with the complete vocabulary.
 
 ```{r cars}
-summary(cars)
+
+cdm <- TestGenerator::patientCDM()
+
 ```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
