--- a/README.Rmd
+++ b/README.Rmd
@@ -19,11 +19,11 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-Does my cohort is including the correct number and type of patients? Am I calculating a cohort intersection the right way? Is that the expected value for treatment duration? It requires just one incorrect parameter to get incoherent results from a pharmacoepidemiological study, and it is challenging to test if our calculations are correct on huge databases. 
+Does my cohort is including the correct patients? Am I calculating an intersection in the right way? Is that the expected value for treatment duration? It just takes one incorrect parameter to get incoherent results in a pharmacoepidemiological study, and it is challenging to test calculations on huge and complex databases. 
 
-That is why TestGenerator is useful to push a micro sample of around 10 patients to unit test a study on the OMOP-CDM. It includes tools to create a blank CDM with a complete vocabulary to perform unit testing on the results and check if the code is doing what we expect. 
+That is why TestGenerator is useful to push a micro sample of around 10 patients to unit test a study on the OMOP-CDM. It includes tools to create a blank CDM with a complete vocabulary and check if the code is doing what we expect. 
 
-This package is based on the unit testing performed on some OHDSI studies.
+This package is based on the unit testing of the [Eramus MC Ranitidine Study](https://github.com/mi-erasmusmc/RanitidineStudy/blob/master/unitTesting_README.md).
 
 ## Installation
 
@@ -40,10 +40,15 @@ The user should create an Excel file with a micro population of around 10 patien
 
 `readPatients()` will read the Excel file, and saves the data in a JSON file. This is useful if the user wants to create more than one sets of test populations for testing. 
 
-```{r}
-library(TestGenerator)
+```{r, eval=FALSE}
 
-TestGenerator::readPatients(here::here("extras", "RSV_Test_Data.xlsx"))
+TestGenerator::readPatients(
+  filePath = "~/pathto/test_data.xlsx",
+  sampleName = "test",
+  tables = c("person", "observation_period", "drug_exposure", "condition_occurrence",
+    "visit_occurrence", "visit_context", "visit_detail", "death"),
+  outputPath = "inst/testCases"
+)
 
 ```
 
@@ -51,7 +56,9 @@ TestGenerator::readPatients(here::here("extras", "RSV_Test_Data.xlsx"))
 
 ```{r}
 
-cdm <- TestGenerator::patientCDM()
+cdm <- TestGenerator::patientCDM(
+  pathJson = "inst/testCases", 
+  sampleName = "test")
 
 ```
 
