--- a/README.Rmd
+++ b/README.Rmd
@@ -28,11 +28,14 @@ This package is based on the unit testing written for the [Eramus MC Ranitidine 
 
 ## Installation
 
-You can install the development version of TestGenerator from [GitHub](https://github.com/) with:
+To install the development version of TestGenerator:
 
 ```{r, eval=FALSE}
-# install.packages("devtools")
-devtools::install_github("darwin-eu-dev/TestGenerator")
+# From CRAN
+install.packages("TestGenerator")
+
+# Development version
+remotes::install_github("darwin-eu-dev/TestGenerator")
 ```
 
 ## Example
