--- a/vignettes/create-sample-data.Rmd
+++ b/vignettes/create-sample-data.Rmd
@@ -40,16 +40,24 @@ patientTables
 filePath <- system.file("extdata/testPatientsRSV.xlsx", package = "TestGenerator")
 outputPath <- file.path(tempdir(), "test")
 dir.create(outputPath)
-TestGenerator::readPatients.xl(filePath = filePath, outputPath = outputPath)
+TestGenerator::readPatients(filePath = filePath, outputPath = outputPath)
 cdm <- TestGenerator::patientsCDM(pathJson = outputPath, testName = "test")
 print(cdm)
+print(cdm$person)
 unlink(outputPath, recursive = TRUE)
 ```
 
-That returns a CDM reference object that now can be used to perform unit tests.
+That returns a CDM reference object that now can be used to test a study, for example like this:
+
+```{r, eval=FALSE}
+runStudy(conn = attr(cdm, "dbcon"),
+         cdmDatabaseSchema = "main",
+         resultsDatabaseSchema = "main",
+         dbName = "myTestDB",
+         minCellCount = 5)
+```
 
 ```{r, echo=FALSE}
-print(cdm$person)
 duckdb::duckdb_shutdown(duckdb::duckdb())
 ```
 
